[gd_scene load_steps=5 format=3 uid="uid://cij06vhna703f"]

[ext_resource type="Script" path="res://bubble_collectible.gd" id="1_wcy0w"]
[ext_resource type="Texture2D" uid="uid://bt74lhiqtdnqp" path="res://assets/textures/Bubbles/Bubble-ColorOnly.png" id="2_jvawu"]
[ext_resource type="Texture2D" uid="uid://bkg4jga733mw7" path="res://assets/textures/Bubbles/Bubble-ShineOnly.png" id="3_klwej"]

[sub_resource type="CircleShape2D" id="CircleShape2D_vmupy"]
radius = 50.0

[node name="BubbleCollectible" type="Area2D" groups=["LevelPassCollectible"]]
position = Vector2(900, 190)
linear_damp = 0.4
script = ExtResource("1_wcy0w")

[node name="BubbleCollision" type="CollisionShape2D" parent="."]
unique_name_in_owner = true
scale = Vector2(0.4, 0.4)
shape = SubResource("CircleShape2D_vmupy")

[node name="Textures" type="Node2D" parent="BubbleCollision"]
scale = Vector2(2.5, 2.5)

[node name="BubbleColor" type="Sprite2D" parent="BubbleCollision/Textures"]
unique_name_in_owner = true
modulate = Color(0.65098, 0.611765, 1, 1)
scale = Vector2(0.08, 0.08)
texture = ExtResource("2_jvawu")

[node name="BubbleShine" type="Sprite2D" parent="BubbleCollision/Textures"]
scale = Vector2(0.08, 0.08)
texture = ExtResource("3_klwej")

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
